# backend

./: .dockerignore  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .graphqlrc.ts  .prettierignore  Dockerfile  Dockerfile.bun  Dockerfile.dev  Dockerfile.lambda  README.md  bun.d.ts  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.remote.yml  eslintrc.ts  global.d.ts  jest.config.ts  justfile  nginx.conf  nodemon.json  package.json  serverless.aws.yml  serverless.azure.yml  serverless.gcp.yml  serverless.yml  tsconfig.json  tsconfig.node.json  tsconfig.noemit.tsbuildinfo  vite.config.ts  webpack.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  backend-tests.yml  codeql-analysis.yml  docker-publish.yml
.storybook/: main.ts
documentation/: babel.config.js  docusaurus.config.js  docusaurus.config.ts  sidebars.ts
documentation/docs/: intro.md  intro.mdx
environments/development/: values.yaml
patches/: langchain+0.0.71.patch  pythonia+1.0.1.patch
source/lambda/: handler.ts
source/native-addon-go/: .gitignore  go.mod  main.go  package.json  tsconfig.json
source/native-addon-python/: requirements.txt
source/native-addon-rust/: Cargo.toml  package.json
source/native-addon-rust/src/: lib.rs
source/native-addon-swift/: Package.swift
source/native-addon-v/: v.mod
source/native-addon-zig/: build.zig  package.json
source/server/: index.ts
source/wasm-assemblyscript/: asconfig.json  package.json
source/wasm-go/: go.mod  main.go  package.json
source/wasm-rust/: Cargo.toml
(+342 files in other folders)
